--- a/astudio/app/src/main/res/layout/fragment_landingpage.xml
+++ b/astudio/app/src/main/res/layout/fragment_landingpage.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.landingpage">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,4 +14,4 @@
         android:rotationY="0"
         android:text="Welcome to Litlore" />
 
-</FrameLayout>
+</LinearLayout>
