--- a/astudio/app/src/main/res/layout/fragment_loginpage.xml
+++ b/astudio/app/src/main/res/layout/fragment_loginpage.xml
@@ -9,6 +9,6 @@
         android:id="@+id/editTextTextEmailAddress3"
         android:layout_width="wrap_content"
         android:layout_height="273dp"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
+        android:ems="10" />
+
 </FrameLayout>
