finished the BrowseBooksFragment, implemented the bottom navbar and working on viewBookFragment

--- a/astudio/app/src/main/res/layout/fragment_blank.xml
+++ b/astudio/app/src/main/res/layout/fragment_blank.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".view.landingpage">
+    tools:context=".BlankFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:text="Welcome to Litlore" />
+        android:text="@string/hello_blank_fragment" />
 
-</LinearLayout>
+</FrameLayout>
