--- a/astudio/app/src/main/res/values/colors.xml
+++ b/astudio/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main">#eda31a</color>
+    <color name="secondary">#f2e8de</color>
 </resources>
