--- a/astudio/app/src/main/res/layout/item_genre_book.xml
+++ b/astudio/app/src/main/res/layout/item_genre_book.xml
@@ -20,5 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numStars="5"
-        android:stepSize="0.5" />
+        android:stepSize="0.5"
+        android:visibility="invisible"/>
 </androidx.cardview.widget.CardView>
