--- a/astudio/app/src/main/res/layout/fragment_search_books.xml
+++ b/astudio/app/src/main/res/layout/fragment_search_books.xml
@@ -5,35 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Search section at the top -->
-    <LinearLayout
-        android:id="@+id/search_section"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
 
-        <EditText
-            android:id="@+id/search_input"
-            android:layout_width="0dp"
+        <!-- LinearLayout centered inside ConstraintLayout -->
+        <LinearLayout
+            android:id="@+id/topBar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/search_hint"
-            android:background="@drawable/search_input_border"
-            android:inputType="text" />
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/go_button"
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/search_section"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_search_button"
-            android:src="@drawable/search_icon"
-            android:contentDescription="@string/search_button_text"
-            android:padding="8dp"
-            android:elevation="4dp" />
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/topBar">
+
+            <EditText
+                android:id="@+id/search_input"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:autofillHints=""
+                android:background="@drawable/search_input_border"
+                android:hint="@string/search_hint"
+                android:inputType="text"
+                android:padding="10dp"
+                android:textSize="15sp" />
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/go_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/bg_search_button"
+                android:padding="8dp"
+                android:src="@drawable/search_icon"
+                android:contentDescription="@string/search_button_text"
+                android:elevation="4dp" />
     </LinearLayout>
 
     <!-- RecyclerView for displaying search results -->
@@ -47,4 +63,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout
+    >
