--- a/astudio/app/src/main/res/layout/fragment_view_book.xml
+++ b/astudio/app/src/main/res/layout/fragment_view_book.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!-- Book Cover -->
+
         <ImageView
             android:id="@+id/book_cover"
             android:layout_width="150dp"
@@ -21,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:contentDescription="@string/book_cover" />
 
-        <!-- Book Title -->
+
         <TextView
             android:id="@+id/book_title"
             android:layout_width="0dp"
@@ -32,9 +32,10 @@
             app:layout_constraintStart_toEndOf="@id/book_cover"
             app:layout_constraintTop_toTopOf="@id/book_cover"
             app:layout_constraintEnd_toEndOf="parent"
-            android:paddingStart="16dp" />
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"/>
 
-        <!-- Author -->
+
         <TextView
             android:id="@+id/book_author"
             android:layout_width="0dp"
@@ -45,9 +46,10 @@
             app:layout_constraintStart_toStartOf="@id/book_title"
             app:layout_constraintTop_toBottomOf="@id/book_title"
             app:layout_constraintEnd_toEndOf="parent"
-            android:paddingStart="16dp" />
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"/>
 
-        <!-- Rating -->
+
         <RatingBar
             android:id="@+id/book_rating"
             android:layout_width="wrap_content"
@@ -62,20 +64,35 @@
             app:layout_constraintTop_toBottomOf="@id/book_author"
             app:layout_constraintStart_toStartOf="@id/book_title" />
 
-        <!-- Description Text -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/post_review_button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/general_button"
+            android:text="@string/add_review"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/book_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/book_title"
+            app:layout_constraintTop_toBottomOf="@+id/book_rating" />
+
         <TextView
             android:id="@+id/book_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/book_description_goes_here"
             android:textSize="14sp"
-            android:maxLines="4"
+            android:maxLines="5"
             android:ellipsize="end"
+            android:layout_marginTop="16dp"
+            android:background="@color/secondary"
+            android:padding="8dp"
             app:layout_constraintTop_toBottomOf="@id/book_cover"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Show More / Show Less Button -->
         <TextView
             android:id="@+id/show_more_button"
             android:layout_width="wrap_content"
@@ -86,6 +103,28 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/book_description"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_marginTop="20dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/show_more_button" />
+
+        <TextView
+            android:id="@+id/reviews_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/reviews_header"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
