--- a/astudio/app/src/main/res/layout/fragment_view_book.xml
+++ b/astudio/app/src/main/res/layout/fragment_view_book.xml
@@ -126,5 +126,17 @@
             app:layout_constraintTop_toBottomOf="@+id/divider" />
 
 
+        <!-- RecyclerView to display reviews -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reviews_recycler"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/reviews_header"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
