--- a/astudio/app/src/main/res/layout/fragment_search_books.xml
+++ b/astudio/app/src/main/res/layout/fragment_search_books.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent">
 
 
-        <!-- LinearLayout centered inside ConstraintLayout -->
         <LinearLayout
             android:id="@+id/topBar"
             android:layout_width="match_parent"
@@ -15,6 +14,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toTopOf="parent">
 
 
@@ -28,7 +28,7 @@
         android:background="@drawable/bg_search_button"
         android:contentDescription="@string/search_button_text"
         android:elevation="4dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="30dp"
         app:layout_goneMarginStart="8dp"
         android:padding="8dp"
         android:src="@drawable/back_arrow"
@@ -84,5 +84,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout
-    >
+</androidx.constraintlayout.widget.ConstraintLayout>
