--- a/astudio/app/src/main/res/layout/fragment_browse_books.xml
+++ b/astudio/app/src/main/res/layout/fragment_browse_books.xml
@@ -13,6 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/loadingSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:outlineAmbientShadowColor="@color/main"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <!-- LinearLayout centered inside ConstraintLayout -->
         <LinearLayout
             android:id="@+id/topBar"
