--- a/astudio/app/src/main/res/layout/fragment_view_profile.xml
+++ b/astudio/app/src/main/res/layout/fragment_view_profile.xml
@@ -32,10 +32,10 @@
             android:id="@+id/ivProfilePicture"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/ic_litlore_logo"
+            android:src="@drawable/profile_picture"
             android:contentDescription="@string/profile_pic_desc"
             android:scaleType="centerCrop"
-            android:background="@drawable/baseline_account_circle_24"
+            android:background="@drawable/profile_picture"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/tvGreeting"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
                 android:id="@+id/tvUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username: @string/username"
+                android:text="@string/username"
                 android:textSize="16sp" />
 
             <LinearLayout
@@ -71,7 +71,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Followers"
+                    android:text="@string/Followers"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
                 <com.google.android.material.button.MaterialButton
@@ -79,7 +79,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Following"
+                    android:text="@string/following"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_marginStart="8dp" />
 
@@ -89,10 +89,10 @@
 
         <!-- Reviews header -->
         <TextView
-            android:id="@+id/tvReviewsHeader"
+            android:id="@+id/ReviewsHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your reviews"
+            android:text="@string/your_reviews"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="32dp"
@@ -105,7 +105,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:paddingTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvReviewsHeader"
+            app:layout_constraintTop_toBottomOf="@id/ReviewsHeader"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
