user reviews implemented in the profile page. Users can now see their past reviews

--- a/astudio/app/src/main/res/layout/fragment_view_profile.xml
+++ b/astudio/app/src/main/res/layout/fragment_view_profile.xml
@@ -15,18 +15,6 @@
         android:layout_marginTop="30dp"
         android:padding="16dp">
 
-        <!-- Centered greeting -->
-        <TextView
-            android:id="@+id/tvGreeting"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/Hello"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
 
         <!-- Centered profile picture below greeting -->
         <ImageView
@@ -38,7 +26,7 @@
             android:scaleType="centerCrop"
             android:background="@drawable/profile_picture"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/tvGreeting"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -65,14 +53,13 @@
                 android:id="@+id/buttonsSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="16dp">
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/followersButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="20dp"
                     android:padding="16dp"
                     android:layout_marginEnd="70dp"
                     android:layout_marginStart="30dp"
@@ -83,7 +70,7 @@
                     android:id="@+id/followingButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_marginTop="20dp"
                     android:padding="16dp"
                     android:text="@string/following"
                     android:background="@drawable/general_button" />
