Added ViewSavedBooks fragment

--- a/astudio/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/astudio/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,6 +6,11 @@
         android:title=""
         android:contentDescription="@string/home_button" />
     <item
+        android:id="@+id/nav_saved_books"
+        android:icon="@drawable/nav_saved_books"
+        android:title=""
+        android:contentDescription="@string/saved_books_button" />
+    <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/nav_profile"
         android:title=""
