--- a/astudio/app/src/main/res/layout/fragment_browse_books.xml
+++ b/astudio/app/src/main/res/layout/fragment_browse_books.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:scrollbars="vertical"
     android:fadeScrollbars="false"
+    android:background="@color/secondary"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
