--- a/astudio/app/src/main/res/layout/fragment_view_profile.xml
+++ b/astudio/app/src/main/res/layout/fragment_view_profile.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:background="@color/secondary"
     tools:context=".view.ViewProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -95,11 +96,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/Reviews"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:paddingTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/ReviewsHeader"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:nestedScrollingEnabled="false"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/item_user_review" />
 
