--- a/astudio/app/src/main/res/layout/item_review.xml
+++ b/astudio/app/src/main/res/layout/item_review.xml
@@ -50,7 +50,7 @@
         android:id="@+id/deleteReviewButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/secondary"
         android:contentDescription="@string/delete_review"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +62,7 @@
         android:id="@+id/editReviewButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/secondary"
         android:layout_marginTop="10dp"
         android:contentDescription="@string/edit_review"
         app:layout_constraintEnd_toEndOf="parent"
