--- a/astudio/app/src/main/res/layout/item_saved_book.xml
+++ b/astudio/app/src/main/res/layout/item_saved_book.xml
@@ -58,6 +58,7 @@
             android:numStars="5"
             android:stepSize="0.5"
             android:layout_marginTop="6dp"
+            android:progressTint="@color/main"
             app:layout_constraintStart_toStartOf="@id/bookTitle"
             app:layout_constraintTop_toBottomOf="@id/bookAuthor" />
 
