--- a/astudio/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/astudio/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,6 +11,11 @@
         android:title=""
         android:contentDescription="@string/saved_books_button" />
     <item
+        android:id="@+id/search_users"
+        android:icon="@drawable/search_user"
+        android:title=""
+        android:contentDescription="@string/search_users_button" />
+    <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/nav_profile"
         android:title=""
