Edited the view profile fragment

--- a/astudio/app/src/main/res/values/colors.xml
+++ b/astudio/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main">#eda31a</color>
     <color name="secondary">#f2e8de</color>
+    <color name="blue">#2196F3</color>
 </resources>
