--- a/astudio/app/src/main/res/layout/fragment_view_profile.xml
+++ b/astudio/app/src/main/res/layout/fragment_view_profile.xml
@@ -18,37 +18,47 @@
 
 
         <!-- Centered profile picture below greeting -->
+
+        <!-- Details: Username and follow buttons -->
         <ImageView
             android:id="@+id/ivProfilePicture"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/profile_picture"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/profile_picture"
             android:contentDescription="@string/profile_pic_desc"
             android:scaleType="centerCrop"
-            android:background="@drawable/profile_picture"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/profile_picture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Details: Username and follow buttons -->
+        <!-- Reviews header -->
+
+        <!-- RecyclerView for reviews -->
+
         <LinearLayout
             android:id="@+id/detailsSection"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="277dp"
+            android:layout_height="67dp"
+            android:layout_marginEnd="8dp"
             android:orientation="vertical"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintBottom_toBottomOf="@+id/ivProfilePicture"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
+            app:layout_constraintTop_toTopOf="@+id/ivProfilePicture"
+            app:layout_constraintVertical_bias="1.0">
 
             <TextView
                 android:id="@+id/tvUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/username"
-                android:textStyle="bold"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:layout_marginStart="30dp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/buttonsSection"
@@ -56,55 +66,99 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/followersButton"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:padding="16dp"
-                    android:layout_marginEnd="70dp"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginLeft="30dp"
                     android:text="@string/Followers"
-                    android:background="@drawable/general_button" />
+                    android:textAllCaps="false"
+                    app:backgroundTint="@color/white"
+                    app:cornerRadius="8dp"
+                    app:iconGravity="textStart"
+                    app:iconPadding="4dp"
+                    app:strokeColor="@color/main"
+                    app:strokeWidth="1dp"
+                    app:useMaterialThemeColors="false" />
 
-                <androidx.appcompat.widget.AppCompatButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/followingButton"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:padding="16dp"
+                    android:layout_marginLeft="5dp"
                     android:text="@string/following"
-                    android:background="@drawable/general_button" />
+                    android:textAllCaps="false"
+                    app:backgroundTint="@color/white"
+                    app:cornerRadius="8dp"
+                    app:iconGravity="textStart"
+                    app:iconPadding="4dp"
+                    app:strokeColor="@color/main"
+                    app:strokeWidth="1dp"
+                    app:useMaterialThemeColors="false" />
+
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <!-- Reviews header -->
         <TextView
             android:id="@+id/ReviewsHeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="24dp"
             android:text="@string/your_reviews"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/detailsSection"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/detailsSection"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnFollow" />
 
-        <!-- RecyclerView for reviews -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/Reviews"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/ReviewsHeader"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:nestedScrollingEnabled="false"
+            android:paddingTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ReviewsHeader"
+            app:layout_constraintVertical_bias="0.074"
             tools:listitem="@layout/item_user_review" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnFollow"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="@string/follow"
+            android:textAllCaps="false"
+            app:backgroundTint="@color/white"
+            app:cornerRadius="8dp"
+            app:iconGravity="textStart"
+            app:iconPadding="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture"
+            app:strokeColor="@color/main"
+            app:strokeWidth="1dp"
+            app:useMaterialThemeColors="false" /><![CDATA[
+
+        app:layout_constraintBottom_toTopOf="@+id/detailsSection"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.606"
+            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.222" />
+
+    ]]>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
