--- a/astudio/app/src/main/res/layout/fragment_view_profile.xml
+++ b/astudio/app/src/main/res/layout/fragment_view_profile.xml
@@ -71,11 +71,10 @@
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginStart="10dp"
                     android:text="@string/Followers"
                     android:textAllCaps="false"
                     app:backgroundTint="@color/white"
-                    app:cornerRadius="8dp"
                     app:iconGravity="textStart"
                     app:iconPadding="4dp"
                     app:strokeColor="@color/main"
@@ -87,7 +86,7 @@
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:text="@string/following"
                     android:textAllCaps="false"
                     app:backgroundTint="@color/white"
@@ -120,7 +119,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/Reviews"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:nestedScrollingEnabled="false"
             android:paddingTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -149,16 +148,7 @@
             app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture"
             app:strokeColor="@color/main"
             app:strokeWidth="1dp"
-            app:useMaterialThemeColors="false" /><![CDATA[
-
-        app:layout_constraintBottom_toTopOf="@+id/detailsSection"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.606"
-            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.222" />
-
-    ]]>
+            app:useMaterialThemeColors="false" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
