--- a/astudio/app/src/main/res/layout/fragment_login.xml
+++ b/astudio/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:background="@color/secondary"
-    tools:context=".view.LoginFragment">
+    tools:context="edu.vassar.litlore.view.LoginFragment">
 
     <TextView
         android:id="@+id/LoginTitle"
